<resources>
    <string name="app_name">My Application</string>
    <string name="moviedetailsactivity">Кликнуть сюда для открытия MovieDetailsActivity</string>

    <string name="name">Avengers:\nEnd Game</string>
    <string name="name1">Avengers: End Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="tag1">Action, Adventure, Drama</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="age">13+</string>

    <string name="description">After the devastating events of Avengers: Infinity War,
        the universe is in ruins.With the help of remaining allies,
        the  Avengers assemble once more in order to reverse
        Thanos`  actions and restore balance to the universe.</string>
    <string name="description_land">After the devastating events of Avengers: Infinity War,
        the universe is in ruins.With the help of remaining allies,
        the Avengers assemble once more in order to reverse
        Thanos` actions and restore balance to the universe.</string>
    <string name="chris_nhemsworth">Chris\nHemsworth</string>
    <string name="mark_nruffalo">Mark \nRuffalo</string>
    <string name="chris_nevans">Chris \nEvans</string>
    <string name="robert_ndowney_jr">Robert \nDowney Jr.</string>
    <string name="cast">Cast</string>
    <string name="back">   Back</string>
    <string name="main_image1">Main Image</string>
    <string name="star1">star1</string>
    <string name="star2">star1</string>
    <string name="star3">star1</string>
    <string name="starwhite">starWhite</string>
    <string name="robert_downey">Robert Downey</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>


    <string name="space4">16dp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>


</resources>