<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_tema"
    tools:context=".fragments.FragmentMoviesList">

    <TextView
        android:id="@+id/tvMoviesList"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/movies_list"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/combined_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAvengers"
        android:clickable="true"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="102dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <LinearLayout
            android:background="@drawable/for_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="214dp"
                android:background="@drawable/main_tema">

                <ImageView
                    android:id="@+id/imMainImageAvengers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/av1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView

                    android:id="@+id/tvAgeAvengers"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/for_age"
                    android:gravity="center"
                    android:text="13+"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imMainImageAvengers" />

                <ImageView
                    android:id="@+id/imLikeAvengers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/like"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="#191926"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp">

                <TextView
                    android:id="@+id/tvGenreAvengers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:includeFontPadding="false"
                    android:text="@string/tag1"
                    android:textColor="#FF3466"
                    android:textSize="8sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star1Avengers"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/star2Avengers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star2Avengers"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="@+id/star1Avengers"
                    app:layout_constraintStart_toEndOf="@+id/star1Avengers"
                    app:layout_constraintTop_toTopOf="@+id/star1Avengers" />

                <ImageView
                    android:id="@+id/star3Avengers"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="@+id/star2Avengers"
                    app:layout_constraintStart_toEndOf="@+id/star2Avengers"
                    app:layout_constraintTop_toTopOf="@+id/star2Avengers" />

                <ImageView
                    android:id="@+id/star4Avengers"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="@+id/star3Avengers"
                    app:layout_constraintStart_toEndOf="@+id/star3Avengers"
                    app:layout_constraintTop_toTopOf="@+id/star3Avengers" />

                <ImageView
                    android:id="@+id/imStarWhite1Avengers"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/star1"
                    app:layout_constraintBottom_toBottomOf="@+id/star4Avengers"
                    app:layout_constraintStart_toEndOf="@+id/star4Avengers"
                    app:layout_constraintTop_toTopOf="@+id/star4Avengers"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tvReviewsAvengers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="57dp"
                    android:includeFontPadding="false"
                    android:text="@string/_125_reviews"
                    android:textColor="@color/gray"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imStarWhite1Avengers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imStarWhite1Avengers"
                    app:layout_constraintTop_toTopOf="@+id/imStarWhite1Avengers" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/Bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTitleFilmAvengers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/name1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTimeLongAvengers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="9dp"
                    android:text="137 MIN"
                    android:textColor="#565665"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleFilmAvengers" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>